--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
-    "@react-native-async-storage/async-storage": "2.1.2",
-    "@react-native-community/datetimepicker": "8.4.1",
+    "@react-native-async-storage/async-storage": "^1.13.0",
+    "@react-native-community/datetimepicker": "^8.4.1",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
+    "@tensorflow/tfjs": "^4.22.0",
+    "@tensorflow/tfjs-react-native": "^1.0.0",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.1",
     "expo": "53.0.20",
@@ -24,8 +26,9 @@
     "expo-blur": "~14.1.5",
     "expo-camera": "~16.1.11",
     "expo-constants": "~17.1.6",
-    "expo-file-system": "~18.1.10",
+    "expo-file-system": "~18.1.11",
     "expo-font": "~13.3.1",
+    "expo-gl": "~15.1.7",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.4.0",
     "expo-image-manipulator": "~13.1.7",
@@ -44,6 +47,7 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-maps": "1.20.1",
     "react-native-paper": "^5.14.0",
@@ -54,10 +58,13 @@
     "react-native-tflite": "^0.0.2",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
-    "tslib": "^2.8.1"
+    "tslib": "^2.8.1",
+    "expo-asset": "~11.1.7",
+    "typescript": "~5.8.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@react-native-community/cli": "latest",
     "@types/react": "~19.0.10",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
